--- a/_sass/_feedback.scss
+++ b/_sass/_feedback.scss
@@ -33,7 +33,8 @@
         box-shadow: -5px -5px 15px rgba(27, 27, 27, 0.08), 5px 5px 15px rgba(27, 27, 27, 0.08);
 
         @media (max-width: 640px) {
-            height: 100vh;
+            //height: 100vh;
+            height: calc(100vh - calc(100vh - 100%));
             border-radius: 0;
             width: 100%;
             padding: 56px 30px 30px 30px;
@@ -71,84 +72,5 @@
             top: 42px;
             right: 10px;
         }
-    }
-}
-
-.feedback-loader {
-    display: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    height: 50px;
-    width: 50px;
-    margin: -25px 0 0 -25px;
-    -webkit-animation: round1-rotate 2s infinite linear;
-    animation: round1-rotate 2s infinite linear;
-
-    @media (max-width: 640px) {
-        top: 320px;
-    }
-
-    &.active {
-        display: block;
-    }
-
-    & span {
-        width: 30px;
-        height: 30px;
-        display: block;
-        position: absolute;
-        background-color: black;
-        border-radius: 50%;
-        -webkit-animation: round1-bounce 2s infinite ease-in-out;
-        animation: round1-bounce 2s infinite ease-in-out;
-    }
-
-    & span:nth-child(2) {
-        top: auto;
-        bottom: 0;
-        -webkit-animation-delay: -1s;
-        animation-delay: -1s;
-    }
-}
-
-@-webkit-keyframes round1-rotate {
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}
-@keyframes round1-rotate {
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}
-@-webkit-keyframes round1-bounce {
-    0%,
-    100% {
-        -webkit-transform: scale(0);
-        transform: scale(0);
-    }
-    50% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
-}
-@keyframes round1-bounce {
-    0%,
-    100% {
-        -webkit-transform: scale(0);
-        transform: scale(0);
-        -webkit-transform: scale(0);
-        transform: scale(0);
-    }
-    50% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        -webkit-transform: scale(1);
-        transform: scale(1);
     }
 }
