disable submit button in feedback modal, when fields empty

--- a/_includes/feedback-form.html
+++ b/_includes/feedback-form.html
@@ -25,7 +25,7 @@
             />
             <label id="feedback-form-phone-error" class="feedback-form__error label"></label>
         </div>
-        <button type="submit" class="feedback-form__btn btn btn--dark">
+        <button type="submit" class="feedback-form__btn btn btn--dark" disabled>
             <div class="feedback-form__btn-spinner"></div>
             <span class="feedback-form__btn-text">Начать проект</span> 
         </button>
