add css to disabled button, remove * in feedback form

--- a/_includes/feedback-form.html
+++ b/_includes/feedback-form.html
@@ -2,7 +2,7 @@
     <h3 class="feedback-form__title h3">Запись на консультацию</h3>
     <form id="feedback-form" class="feedback-form" action="">
         <div class="feedback-form__item">
-            <label class="feedback-form__label label">Имя*</label>
+            <label class="feedback-form__label label">Имя</label>
             <input
                 id="feedback-form-name"
                 name="name"
@@ -14,7 +14,7 @@
             <label id="feedback-form-name-error" class="feedback-form__error label"></label>
         </div>
         <div class="feedback-form__item">
-            <label class="feedback-form__label label">Телефон*</label>
+            <label class="feedback-form__label label">Телефон</label>
             <input
                 id="feedback-form-phone"
                 name="phone"
