--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -104,26 +104,34 @@
     @media (max-width: 640px) {
         font-size: 16px;
     }
-}
 
-.btn--dark {
-    color: var(--color-white);
-    background-color: var(--color-dark);
-}
+    &:disabled {
+        opacity: 0.3;
+    }
 
-.btn--dark:hover {
-    color: var(--color-white);
-    background-color: var(--color-primary);
-}
+    &--dark {
+        color: var(--color-white);
+        background-color: var(--color-dark);
 
-.btn--white {
-    color: var(--color-dark);
-    background-color: var(--color-white);
-}
+        &:hover {
+            &:not([disabled]) {
+                color: var(--color-white);
+                background-color: var(--color-primary);
+            }
+        }
+    }
 
-.btn--white:hover {
-    color: var(--color-white);
-    background-color: var(--color-primary);
+    &--white {
+        color: var(--color-dark);
+        background-color: var(--color-white);
+
+        &:hover {
+            &:not([disabled]) {
+                color: var(--color-white);
+                background-color: var(--color-primary);
+            }
+        }
+    }
 }
 
 .link {
