change placeholder in feedback form

--- a/_includes/feedback-form.html
+++ b/_includes/feedback-form.html
@@ -20,7 +20,7 @@
                 name="phone"
                 class="feedback-form__input input"
                 type="tel"
-                placeholder="+7 (XXX) XXX-XX-XX"
+                placeholder="Введите номер телефона"
                 autocomplete="off"
             />
             <label id="feedback-form-phone-error" class="feedback-form__error label"></label>
