add new images, change colors, fixes

--- a/_includes/home/section-about-team.html
+++ b/_includes/home/section-about-team.html
@@ -1,17 +1,13 @@
 <section class="about-team">
     <div class="container flex-container">
         <h4 class="h4">О команде</h4>
-        <h2 class="h2 section-title">Мы – команда профессионалов</h2>
-        <div class="about-team__items">
-            <div class="about-team__item1">
-                <h3 class="h3 about-team__item1-title">
-                    Над вашим проектом будут работать менеджеры, дизайнеры, разработчики, инженеры по качеству
-                    и специалисты по внедрению
-                </h3>
-            </div>
-            <div class="about-team__item2">
-                <h3 class="h3 about-team__item2-title">Основа команды специалисты с опытом более 5 лет</h3>
-            </div>
+        <h2 class="h2 section-title">Мы – команда профессионалов с опытом более 5 лет</h2>
+        <div class="about-team__item">
+            <h3 class="h3 about-team__item-title">
+                Над вашим проектом будут работать менеджеры, дизайнеры, разработчики, инженеры по качеству и специалисты
+                по внедрению
+            </h3>
+            <button class="btn btn--dark about-team__item-btn modal-btn">Начать проект</button>
         </div>
     </div>
 </section>
