--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,8 +2,10 @@
     --color-primary: #367CF4;
     --color-yellow: #F3CA46;
     --color-dark: #333333;
+    --color-dark-hover: #2F2F2F;
     --color-dark56: rgba(51, 51, 51, 0.56);
     --color-white: #FFFFFF;
+    --color-white-hover: #EBEBEB;
     --color-white72: rgba(255, 255, 255, 0.72);
     --color-purple: #7b5deb;
     --color-blush: #DA657A;;
