--- a/_sass/home/_section-why-we.scss
+++ b/_sass/home/_section-why-we.scss
@@ -22,16 +22,22 @@
                 "item2"
                 "item3";
             grid-template-columns: 1fr;
-            grid-template-rows: repeat(3, 450px);
+            grid-template-rows: repeat(3, 500px);
         }
 
         @media (max-width: 640px) {
             margin-top: 60px;
+            grid-template-rows: repeat(3, 450px);
         }
 
         @media (max-width: 390px) {
             margin-top: 40px;
-            grid-template-rows: repeat(3, 428px);
+            grid-template-rows: repeat(3, 330px);
+        }
+
+        @media (max-width: 320px) {
+            margin-top: 40px;
+            grid-template-rows: repeat(3, 280px);
         }
     }
     &__item {
@@ -66,11 +72,15 @@
             justify-content: space-between;
 
             & img {
-                width: 100%;
+                max-width: 100%;
+                align-self: center;
+                
+                @media (max-width: 960px) {
+                    max-height: 380px;
+                }
 
-                @media (max-width: 390px) {
-                    object-fit: cover;
-                    height: 60%;
+                @media (max-width: 640px) {
+                    max-height: 362px;
                 }
             }
         }
@@ -82,11 +92,15 @@
             justify-content: space-between;
 
             & img {
-                width: 100%;
+                max-width: 100%;
+                align-self: center;
+                
+                @media (max-width: 960px) {
+                    max-height: 380px;
+                }
 
-                @media (max-width: 390px) {
-                    object-fit: cover;
-                    height: 60%;
+                @media (max-width: 640px) {
+                    max-height: 362px;
                 }
             }
         }
@@ -100,7 +114,6 @@
             @media (max-width: 960px) {
                 flex-direction: column;
             }
-
 
             & h3 {
                 width: 50%;
@@ -118,16 +131,16 @@
                 }
             }
             & img {
-                width: 50%;
-                object-fit: contain;
+                max-width: 50%;
+                align-self: center;
 
                 @media (max-width: 960px) {
-                    width: 100%;
+                    max-height: 380px;
+                    max-width: 100%;
                 }
 
-                @media (max-width: 390px) {
-                    object-fit: cover;
-                    height: 60%;
+                @media (max-width: 640px) {
+                    max-height: 362px;
                 }
             }
         }
