--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,6 @@
     </body>
     {%- include feedback.html -%}
     {%- include mobile-menu.html -%}
-
-    <script src="{{ site.baseurl | prepend: site.url }}/assets/js/script.js"></script>
-    <script src="{{ site.baseurl | prepend: site.url }}/assets/js/feedback.js"></script>
-    {% if jekyll.environment == "development" %}
-        <script>
-            window.isTestMode == true
-        </script>
-    {%- endif -%}
+    {%- include script.html -%}
+    {%- include env.html -%}
 </html>
