--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -9,6 +9,6 @@
   
   {%- include feedback.html -%}
   {%- include mobile-menu.html -%}
-  <script src="{{ site.baseurl | prepend: site.url }}/assets/js/script.js"></script>
-  <script src="{{ site.baseurl | prepend: site.url }}/assets/js/feedback.js"></script>
+  {%- include script.html -%}
+  {%- include env.html -%}
 </html>
