--- a/_layouts/document.html
+++ b/_layouts/document.html
@@ -14,6 +14,6 @@
   {%- include footer.html -%}
   {%- include feedback.html -%}
   {%- include mobile-menu.html -%}
-  <script src="{{ site.baseurl | prepend: site.url }}/assets/js/script.js"></script>
-  <script src="{{ site.baseurl | prepend: site.url }}/assets/js/feedback.js"></script>
+  {%- include script.html -%}
+  {%- include env.html -%}
 </html>
