--- a/_includes/home/section-hero.html
+++ b/_includes/home/section-hero.html
@@ -1,9 +1,9 @@
 <section class="hero">
-    <div class="container flex-container">
+    <div class="hero-container flex-container">
         <h1 class="hero__title h1">15 лет делаем приложения для крупного бизнеса</h1>
         <p class="hero__descr">
             Успех наших проектов стоит на 3-х китах: качественная аналитика, продуктовый дизайн, внедрение в работу
         </p>
-        <button id="open-btn-hero" class="btn btn--dark hero__btn modal-btn">Начать проект</button>
+        <button class="btn btn--dark hero__btn modal-btn">Начать проект</button>
     </div>
 </section>
