--- a/_sass/home/_section-how-we-work.scss
+++ b/_sass/home/_section-how-we-work.scss
@@ -42,16 +42,15 @@
 
             @media (max-width: 960px) {
                 width: 100%;
-                height: 60%;
                 padding: 56px;
             }
 
             @media (max-width: 640px) {
-                padding: 40px;
+                padding: 40px 40px 42px 40px;
             }
 
             @media (max-width: 390px) {
-                padding: 24px 24px 24px 24px;
+                padding: 24px 24px 27px 24px;
             }
         }
         &-center {
@@ -62,8 +61,19 @@
             width: 50%;
 
             @media (max-width: 960px) {
-                height: 40%;
                 width: 100%;
+                max-height: 470px;
+            }
+            @media (max-width: 640px) {
+                max-height: 320px;
+            }
+
+            @media (max-width: 390px) {
+                max-height: 200px;
+            }
+
+            @media (max-width: 320px) {
+                max-height: 180px;
             }
 
         }
@@ -79,6 +89,12 @@
 
             @media (max-width: 960px) {
                 margin-top: 24px;
+            }
+
+            @media (max-width: 640px) {
+                font-size: 16px;
+                line-height: 24px;
+                margin-top: 16px;
             }
 
             @media (max-width: 390px) {
@@ -98,20 +114,24 @@
             }
         }
         &-img {
-            width: 100%;
-            //max-width: 328px;
+            max-width: 100%;
+            margin: 63px 0 63px 0;
 
             @media (max-width: 960px) {
-                margin-top: 45px;
-                // max-width: 320px;
+                max-height: 470px;
+                margin: 0;
             }
 
             @media (max-width: 640px) {
-                // max-width: 174px;
+                max-height: 320px;
             }
 
             @media (max-width: 390px) {
-                // max-width: 150px;
+                max-height: 200px;
+            }
+
+            @media (max-width: 320px) {
+                max-height: 180px;
             }
         }
     }
