fix images in section why we

--- a/_includes/home/section-about-team.html
+++ b/_includes/home/section-about-team.html
@@ -1,7 +1,7 @@
 <section class="about-team">
     <div class="container flex-container">
         <h4 class="h4">О команде</h4>
-        <h2 class="h2 section-title">Мы – команда профессионалов с опытом более 5 лет</h2>
+        <h2 class="h2 section-title">Мы – команда профессионалов</h2>
         <div class="about-team__item">
             <h3 class="h3 about-team__item-title">
                 Над вашим проектом будут работать менеджеры, дизайнеры, разработчики, инженеры по качеству и специалисты
