--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -94,7 +94,7 @@
 
 .btn {
     border-radius: 10px;
-    min-height: 60px;
+    height: 60px;
     font-weight: 600;
     font-size: 20px;
     line-height: 24px;
