--- a/_includes/home/section-what-we-do.html
+++ b/_includes/home/section-what-we-do.html
@@ -3,17 +3,21 @@
         <h4 class="h4">Что мы делаем</h4>
         <h2 class="h2 section-title">У нас есть опыт в этих сферах</h2>
         <div class="what-we-do__items">
-            <a href="{{site.baseurl}}/projects?sphere=business-processes" class="what-we-do__item item1">
+            <a href="{{site.baseurl}}/projects?sphere=business-processes" class="what-we-do__item">
                 <h3 class="h3 what-we-do__item-title">Цифровизация<br/> бизнес-процессов</h3>
+                <img src="{{ site.baseurl }}/assets/img/home/business-process.png" alt="business-process" />
             </a>
-            <a href="{{site.baseurl}}/projects?sphere=project-management" class="what-we-do__item item2">
+            <a href="{{site.baseurl}}/projects?sphere=project-management" class="what-we-do__item">
                 <h3 class="h3 what-we-do__item-title">Системы управления проектами</h3>
+                <img src="{{ site.baseurl }}/assets/img/home/project-management.png" alt="project-management" />
             </a>
-            <a href="{{site.baseurl}}/projects?sphere=electronic-document" class="what-we-do__item item3">
+            <a href="{{site.baseurl}}/projects?sphere=electronic-document" class="what-we-do__item">
                 <h3 class="h3 what-we-do__item-title">Электронный документооборот</h3>
+                <img src="{{ site.baseurl }}/assets/img/home/document-management.png" alt="document-management" />
             </a>
-            <a href="{{site.baseurl}}/projects" class="what-we-do__item item4">
+            <a href="{{site.baseurl}}/projects" class="what-we-do__item">
                 <h3 class="h3 what-we-do__item-title">Посмотреть все сферы</h3>
+                <img src="{{ site.baseurl }}/assets/img/home/all-spheres.png" alt="all-spheres" />
             </a>
         </div>
     </div>
