--- a/_sass/home/_section-how-we-work.scss
+++ b/_sass/home/_section-how-we-work.scss
@@ -56,7 +56,6 @@
         &-center {
             display: flex;
             flex-direction: column;
-            align-items: center;
             justify-content: center;
             width: 50%;
 
@@ -116,22 +115,23 @@
         &-img {
             max-width: 100%;
             margin: 63px 0 63px 0;
+            object-fit: cover;
 
             @media (max-width: 960px) {
-                max-height: 470px;
+                max-height: 486px;
                 margin: 0;
             }
 
             @media (max-width: 640px) {
-                max-height: 320px;
+                max-height: 310px;
             }
 
             @media (max-width: 390px) {
-                max-height: 200px;
+                max-height: 202px;
             }
 
             @media (max-width: 320px) {
-                max-height: 180px;
+                max-height: 162px;
             }
         }
     }
