--- a/_sass/home/_section-hero.scss
+++ b/_sass/home/_section-hero.scss
@@ -14,27 +14,33 @@
 
     @media (max-width: 640px) {
         min-height: 700px;
+        background-position: bottom 44px center;
     }
 
     @media (max-width: 390px) {
         min-height: 560px;
+        background-position: bottom 40px center;
+    }
+
+    @media (max-width: 320px) {
+        background-position: bottom 52px center;
     }
 
     &-container {
         max-width: 1280px;
         margin: 0 auto;
-        padding: 72px 40px 100px 40px;
+        padding: 72px 40px 0 40px;
     
         @media (max-width: 640px) {
-            padding: 72px 20px;
+            padding: 72px 20px 0 20px;
         }
     
         @media (max-width: 390px) {
-            padding: 80px 16px;
+            padding: 72px 16px 0 16px;
         }
     
         @media (max-width: 320px) {
-            padding: 80px 10px;
+            padding: 72px 10px 0 10px;
         }
     }
 
