--- a/_includes/home/section-how-we-work.html
+++ b/_includes/home/section-how-we-work.html
@@ -12,9 +12,11 @@
                     </p>
                     <a href="#" class="link how-we-work__item-link modal-btn">Получить консультацию</a>
                 </div>
-                <div class="how-we-work__item-center">
-                    <img class="how-we-work__item-img" src="{{ site.baseurl }}/assets/img/home/from-scratch.png" alt="from-scratch" />
-                </div>
+                <img
+                    class="how-we-work__item-img"
+                    src="{{ site.baseurl }}/assets/img/home/from-scratch.png"
+                    alt="from-scratch"
+                />
             </div>
             <div class="how-we-work__item how-we-work__item--reverse">
                 <div class="how-we-work__item-col">
@@ -25,22 +27,26 @@
                     </p>
                     <a href="#" class="link how-we-work__item-link modal-btn">Расчитать смету по ТЗ</a>
                 </div>
-                <div class="how-we-work__item-center">
-                    <img class="how-we-work__item-img" src="{{ site.baseurl }}/assets/img/home/project-work.png" alt="project-work" />
-                </div>
+                <img
+                    class="how-we-work__item-img"
+                    src="{{ site.baseurl }}/assets/img/home/project-work.png"
+                    alt="project-work"
+                />
             </div>
             <div class="how-we-work__item">
                 <div class="how-we-work__item-col">
                     <h3 class="h3 how-we-work__item-title">Гибкая разработка</h3>
                     <p class="how-we-work__item-desc">
-                        У вас есть сложные задачи, которые требуют особого подхода. Мы будем работать спринтами, по
-                        итогам которых команда проанализирует результаты и поставит приоритеты для следующего цикла.
+                        У вас есть сложные задачи, которые требуют особого подхода. Мы работаем спринтами, по итогам
+                        которых команда проанализирует результаты и поставит приоритеты для следующего цикла.
                     </p>
                     <a href="#" class="link how-we-work__item-link modal-btn">Написать нам</a>
                 </div>
-                <div class="how-we-work__item-center">
-                    <img class="how-we-work__item-img" src="{{ site.baseurl }}/assets/img/home/agile-development.png" alt="agile-development" />
-                </div>
+                <img
+                    class="how-we-work__item-img"
+                    src="{{ site.baseurl }}/assets/img/home/agile-development.png"
+                    alt="agile-development"
+                />
             </div>
         </div>
     </div>
