--- a/_includes/home/section-what-we-do.html
+++ b/_includes/home/section-what-we-do.html
@@ -4,7 +4,7 @@
         <h2 class="h2 section-title">У нас есть опыт в этих сферах</h2>
         <div class="what-we-do__items">
             <a href="{{site.baseurl}}/projects?sphere=business-processes" class="what-we-do__item">
-                <h3 class="h3 what-we-do__item-title">Цифровизация<br/> бизнес-процессов</h3>
+                <h3 class="h3 what-we-do__item-title">Цифровизация бизнес-процессов</h3>
                 <img src="{{ site.baseurl }}/assets/img/home/business-process.png" alt="business-process" />
             </a>
             <a href="{{site.baseurl}}/projects?sphere=project-management" class="what-we-do__item">
