--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -135,6 +135,7 @@
 .link {
     font-weight: 500;
     font-size: 24px;
+    line-height: 32px;
     color: var(--color-dark);
 
     @media (max-width: 640px) {
