fix in how-we-do and change hover color in btn

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,7 +2,7 @@
     --color-primary: #367CF4;
     --color-yellow: #F3CA46;
     --color-dark: #333333;
-    --color-dark-hover: #2F2F2F;
+    --color-dark-hover: #232323;
     --color-dark56: rgba(51, 51, 51, 0.56);
     --color-white: #FFFFFF;
     --color-white-hover: #EBEBEB;
