--- a/_sass/home/_section-how-we-work.scss
+++ b/_sass/home/_section-how-we-work.scss
@@ -16,7 +16,7 @@
         flex-direction: row;
         margin-top: 24px;
 
-        @media (max-width: 960px) {
+        @media (max-width: 1100px) {
             flex-direction: column-reverse;
             height: 100%;
             max-height: 830px;
@@ -38,7 +38,7 @@
         &--reverse {
             flex-direction: row-reverse;
 
-            @media (max-width: 960px) {
+            @media (max-width: 1100px) {
                 flex-direction: column-reverse;
             }
         }
@@ -46,19 +46,19 @@
             display: flex;
             flex-direction: column;
             width: 50%;
-            padding: 88px 56px;
+            padding: 56px;
 
-            @media (max-width: 960px) {
+            @media (max-width: 1100px) {
+                padding: 16px 56px 56px 56px;
                 width: 100%;
-                padding: 56px;
             }
 
             @media (max-width: 640px) {
-                padding: 40px 40px 42px 40px;
+                padding: 16px 40px 40px 40px;
             }
 
             @media (max-width: 390px) {
-                padding: 24px 24px 27px 24px;
+                padding: 16px 24px 24px 24px;
             }
         }
         &-title {
@@ -100,12 +100,10 @@
         }
         &-img {
             max-width: 50%;
-            margin: 63px 0 63px 0;
             object-fit: contain;
-            height: 100%;
+            max-height: 100%;
 
-            @media (max-width: 960px) {
-                margin: 0;
+            @media (max-width: 1100px) {
                 max-width:100%;
             }
         }
