--- a/_includes/home/section-hero.html
+++ b/_includes/home/section-hero.html
@@ -1,9 +1,8 @@
+{% assign texts = site.data.texts %}
 <section class="hero">
     <div class="hero-container flex-container">
-        <h1 class="hero__title h1">15 лет делаем приложения для крупного бизнеса</h1>
-        <p class="hero__descr">
-            Успех наших проектов стоит на 3-х китах: качественная аналитика, продуктовый дизайн, внедрение в работу
-        </p>
-        <button class="btn btn--dark hero__btn modal-btn">Начать проект</button>
+        <h1 class="hero__title h1">{{ texts.hero.title[site.lang] }}</h1>
+        <p class="hero__descr">{{ texts.hero.description[site.lang] }}</p>
+        <button class="btn btn--dark hero__btn modal-btn">{{ texts.hero.startProject[site.lang] }}</button>
     </div>
 </section>
