--- a/_includes/home/section-hero.html
+++ b/_includes/home/section-hero.html
@@ -1,8 +1,8 @@
-{% assign texts = site.data.texts %}
+{% assign hero = site.data.texts.hero %}
 <section class="hero">
     <div class="hero-container flex-container">
-        <h1 class="hero__title h1">{{ texts.hero.title[site.lang] }}</h1>
-        <p class="hero__descr">{{ texts.hero.description[site.lang] }}</p>
-        <button class="btn btn--dark hero__btn modal-btn">{{ texts.hero.startProject[site.lang] }}</button>
+        <h1 class="hero__title h1">{{ hero.title[site.lang] }}</h1>
+        <p class="hero__descr">{{ hero.description[site.lang] }}</p>
+        <button class="btn btn--dark hero__btn modal-btn">{{ hero.startProject[site.lang] }}</button>
     </div>
 </section>
