--- a/_includes/footer-small.html
+++ b/_includes/footer-small.html
@@ -1,10 +1,11 @@
+{% assign text = site.data.texts_app.footer %}
 <footer class="footer-small">
     <div class="footer-small__container">
         <div class="footer-small__bottom">
-            <p class="footer-small__text footer-small__company">© 2022 ООО «Цитрониум»</p>
+            <p class="footer-small__text footer-small__company">{{ text.company[site.lang] }}</p>
             <div class="footer-small__bottom-right">
-                <a href="/policy-personal-data" class="footer-small__text footer-small__personal">Политика обработки персональных данных</p>
-                <a href="/privacy-policy" class="footer-small__text footer-small__privacy">Политика конфиденциальности</a>
+                <a href="/policy-personal-data" class="footer-small__text footer-small__personal">{{ text.personal[site.lang] }}</p>
+                <a href="/privacy-policy" class="footer-small__text footer-small__privacy">{{ text.privacy[site.lang] }}</a>
             </div>
         </div>
     </div>
