--- a/_includes/script.html
+++ b/_includes/script.html
@@ -1,2 +1,2 @@
-<script src="/assets/js/script.js"></script>
-<script src="/assets/js/feedback.js"></script>
+<script src="{{ "/assets/js/script.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/js/feedback.js" | prepend: site.baseurl }}"></script>
