fix policy links

--- a/_includes/footer-small.html
+++ b/_includes/footer-small.html
@@ -4,8 +4,8 @@
         <div class="footer-small__bottom">
             <p class="footer-small__text footer-small__company">{{ text.company[site.lang] }}</p>
             <div class="footer-small__bottom-right">
-                <a href="/policy-personal-data" class="footer-small__text footer-small__personal">{{ text.personal[site.lang] }}</p>
-                <a href="/privacy-policy" class="footer-small__text footer-small__privacy">{{ text.privacy[site.lang] }}</a>
+                <a href="{{site.baseurl}}/policy-personal-data" class="footer-small__text footer-small__personal">{{ text.personal[site.lang] }}</p>
+                <a href="{{site.baseurl}}/privacy-policy" class="footer-small__text footer-small__privacy">{{ text.privacy[site.lang] }}</a>
             </div>
         </div>
     </div>
