--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,8 @@
         <div class="footer__bottom">
             <p class="footer__text footer__company">{{ text.company[site.lang] }}</p>
             <div class="footer__bottom-right">
-                <a href="/policy-personal-data" class="footer__text footer__personal">{{ text.personal[site.lang] }}</p>
-                <a href="/privacy-policy" class="footer__text footer__privacy">{{ text.privacy[site.lang] }}</a>
+                <a href="{{site.baseurl}}/policy-personal-data" class="footer__text footer__personal">{{ text.personal[site.lang] }}</p>
+                <a href="{{site.baseurl}}/privacy-policy" class="footer__text footer__privacy">{{ text.privacy[site.lang] }}</a>
             </div>
         </div>
     </div>
